After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767279 - another arm build error from the flatpak autobuilder
another arm build error from the flatpak autobuilder
Status: RESOLVED FIXED
Product: gtksourceview
Classification: Platform
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GTK Sourceview maintainers
GTK Sourceview maintainers
Depends on:
Blocks:
 
 
Reported: 2016-06-06 03:01 UTC by Matthias Clasen
Modified: 2016-06-25 20:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2016-06-06 03:01:06 UTC
gtksourcegutter.c: In function ‘redraw_for_window’:
gtksourcegutter.c:1489:41: error: cast increases required alignment of target type [-Werror=cast-align]
                                         (GdkEvent *)event,

as seen in

https://gnome7.codethink.co.uk//logs/build-2016-06-05-090501/build-org.gnome.Calculator.txt
Comment 1 Sébastien Wilmet 2016-06-08 15:27:23 UTC
We can blindly try to fix all these errors one by one, but it would be smarter to build with --disable-Werror to see all the warnings at once, and/or someone with access to the ARM hardware can provide tested patches.

I wonder why we didn't have any bug reports before, from distros like Debian building GtkSourceView on ARM. Maybe they ignore the warnings.
Comment 2 Tristan Van Berkom 2016-06-09 15:17:28 UTC
Here is a build log, with --disable-Werror, building for ARMv7-A

https://gnome8.codethink.co.uk//logs/build-2016-06-09-161001/build-org.gnome.gedit.txt

Note, the build host is aarch64, in a sysroot built with a cross compiled ARMv7-A native compiler.

A possible fix here *might* be to pass --build=arm-unknown-linux-gnueabi to configure, maybe this will help with cast align issues ? (maybe the configure script is picking up 64bit build host ?)
Comment 3 Sébastien Wilmet 2016-06-10 11:19:51 UTC
The first warning was fixed in bug #767254. It seems that there is only one remaining warning (the one reported here).
Comment 4 Sébastien Wilmet 2016-06-10 11:45:46 UTC
Does commit 3d82d6918a69d5f96591794afb87c42fe5148cc5 fix the problem?
Comment 5 Sébastien Wilmet 2016-06-11 10:12:55 UTC
Commit backported on 3.20, since I see that the build is on 3.20.
Comment 6 Sébastien Wilmet 2016-06-25 20:49:14 UTC
I suppose it's fixed now.