gutter: change event param type of redraw_for_window()

This should fix a warning on ARM:
https://bugzilla.gnome.org/show_bug.cgi?id=767279